issue fix from orthography (distorted)

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -4,7 +4,7 @@
   height: auto;
 }
 
-.avatar.distorded {
+.avatar.distorted {
   width: 200px;
   height: 400px;
 }
